gatekeeper/templates/disallow-host-network-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostnetwork

        import rego.v1

        pod_spec := input.review.object.spec if {
          input.review.kind.kind == "Pod"
        }

        pod_spec := input.review.object.spec.template.spec if {
          input.review.object.spec.template.spec
        }

        violation contains {"msg": msg} if {
          pod_spec.hostNetwork == true
          msg := "hostNetwork: true is not allowed"
        }
